update layout from 1440 to 1920

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             alt="Midwest Christian Academy Logo"
           />
         </div>
-        <nav>Menu</nav>
+        <nav><a href="#">Menu</a></nav>
       </div>
       <hr />
     </header>
@@ -33,7 +33,7 @@
         <div class="container">
           <h1><span>Welcome to</span> Midwest Christian Academy</h1>
           <p>
-            Midwest Christian Academy has a mission of <br/><span>educating and empowering</span>
+            Midwest Christian Academy has a mission of <span>educating and empowering</span>
             young men and women with a Christ-Centered focus. Our rigorous,
             online college preparatory curriculum encourages students to shine
             academically, develop character, and grow spiritually.
