--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Midwest Christian Academy</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;300;400;700;800;900&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -28,7 +21,7 @@
       <hr />
     </header>
     <main>
-      <div id="hero" class="d-flex">
+      <section id="hero" class="d-flex">
         <img class="hero-img" src="./images/hero.png" />
         <div class="container">
           <h1><span>Welcome to</span> Midwest Christian Academy</h1>
@@ -44,8 +37,8 @@
               and worship.</b>
           </p>
         </div>
-      </div>
-      <div class="bg-basketball">
+      </section>
+      <section class="bg-basketball">
         <div class="container">
           <div class="subMenu_list d-flex">
             <a href="#" class="subMenu spiritual">Spiritual Growth</a>
@@ -64,7 +57,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
     </main>
     <footer></footer>
 
