Add Section - Imagine Learning & Elgibility Registration

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
       <section id="hero" class="d-flex">
         <img class="hero-img" src="./images/hero.png" />
-        <div class="container">
+        <div class="container d-grid">
           <h1><span>Welcome to</span> Midwest Christian Academy</h1>
           <p>
             Midwest Christian Academy has a mission of <span>educating and empowering</span>
@@ -40,12 +40,12 @@
       </section>
       <section class="bg-basketball">
         <div class="container">
-          <div class="subMenu_list d-flex">
+          <div class="subMenu__list d-flex">
             <a href="#" class="subMenu spiritual">Spiritual Growth</a>
             <a href="#" class="subMenu academics">Academics</a>
             <a href="#" class="subMenu athletics">Athletics</a>
           </div>
-          <div class="subMenu_txt">
+          <div class="subMenu__txt">
             <p>
               Institutions install habits,<br />
               habits become virtues,
@@ -55,6 +55,33 @@
               become<br />
               <span>character.</span>
             </p>
+          </div>
+        </div>
+      </section>
+      <section id="imgLearning">  
+        <div class="container">
+          <h2>EDUCATION POWERED BY Imagine Learning</h2>
+          <hr>
+          <div class="d-grid">
+            <p class="imgLearning__txt1"><b>Midwest Christian Academy partners with Imagine Learning Academy to maximize student achievement.</b></p>
+            <img class="imgLearning__img" src="./images/home_imagelearning.png" alt="Imagine Learning">
+            <p class="imgLearning__txt2">Imagine Edgenuity is a virtual alternative, and uses pre-recorded videos and primarily focuses on struggling students, and sticking at pace. Along with pre-recorded lecture, Imagine Edgenuity uses interactives and real-world problems.</p>
+          </div>
+        </div>
+      </section>
+      <section id="elgibility">
+        <div class="container d-grid">
+          <div class="elgibility__img">
+            <div class="orangeCircle"></div>
+            <img src="./images/home_elgibility.png">
+          </div>
+          <div class="elgibility__txt">
+            <h2>ELGIBILITY REGISTRATION</h2>
+            <hr>
+            <div class="elgibility__logo d-flex">
+              <img src="./images/logo_naia.png" alt="NAIA Logo">
+              <img src="./images/logo_ncaa.png" alt="NCAA Logo">
+            </div>
           </div>
         </div>
       </section>
