--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Midwest Christian Academy</title>
+    <!-- swiper css -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
+    <!-- main css -->
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <header>
       <div class="container d-flex">
@@ -21,12 +28,13 @@
       <hr />
     </header>
     <main>
+      <!-- HERO -->
       <section id="hero" class="d-flex">
         <img class="hero-img" src="./images/hero.png" />
         <div class="container d-grid">
           <h1><span>Welcome to</span> Midwest Christian Academy</h1>
           <p>
-            Midwest Christian Academy has a mission of <span>educating and empowering</span>
+            Midwest Christian Academy has a mission of <span class="hilight">educating and empowering</span>
             young men and women with a Christ-Centered focus. Our rigorous,
             online college preparatory curriculum encourages students to shine
             academically, develop character, and grow spiritually.
@@ -38,8 +46,9 @@
           </p>
         </div>
       </section>
+      <!-- SUB MENU -->
       <section class="bg-basketball">
-        <div class="container">
+        <div class="container d-flex">
           <div class="subMenu__list d-flex">
             <a href="#" class="subMenu spiritual">Spiritual Growth</a>
             <a href="#" class="subMenu academics">Academics</a>
@@ -53,22 +62,24 @@
             <p>
               and virtues<br />
               become<br />
-              <span>character.</span>
+              <span class="hilight">character.</span>
             </p>
           </div>
         </div>
       </section>
+      <!-- IMAGINE LEARNING -->
       <section id="imgLearning">  
         <div class="container">
           <h2>EDUCATION POWERED BY Imagine Learning</h2>
           <hr>
           <div class="d-grid">
-            <p class="imgLearning__txt1"><b>Midwest Christian Academy partners with Imagine Learning Academy to maximize student achievement.</b></p>
+            <p class="imgLearning__txt1"><b>Midwest Christian Academy partners with Imagine Learning Academy to <span class="hilight">maximize student achievement.</span></b></p>
             <img class="imgLearning__img" src="./images/home_imagelearning.png" alt="Imagine Learning">
             <p class="imgLearning__txt2">Imagine Edgenuity is a virtual alternative, and uses pre-recorded videos and primarily focuses on struggling students, and sticking at pace. Along with pre-recorded lecture, Imagine Edgenuity uses interactives and real-world problems.</p>
           </div>
         </div>
       </section>
+      <!-- ELGIBILITY -->
       <section id="elgibility">
         <div class="container d-grid">
           <div class="elgibility__img">
@@ -85,9 +96,113 @@
           </div>
         </div>
       </section>
+      <!-- TESTIMONIAL -->
+      <section id="testimonial">
+        <div class="container">
+          <h2>What Students Are Saying</h2>
+          <!-- Slider main container -->
+          <div class="swiper testiSlider">
+            <div class="swiper-wrapper">
+              <!-- testi 1 -->
+              <div class="swiper-slide testiCard">
+                <div class="testi-img">
+                  <img src="./images/student_1.png" alt="">
+                </div>
+                  <div class="testi-txt">
+                    <p>It’s about an hour and 45 minutes from our front door to the school drop off. It’s all worth it, with the opportunities and expectations and
+                      goals I can have.</p>
+                      <div class="testi-name">Tatum Barreras</div>
+                  </div>
+              </div>
+              <!-- testi 2 -->
+              <div class="swiper-slide testiCard">
+                <div class="testi-img">
+                  <img src="./images/student_2.png" alt="">
+                </div>
+                  <div class="testi-txt">
+                    <p>The attitude between kids is like family…more like family. We are always together. Since I started coming here, I have jumped levels in academics.</p>
+                      <div class="testi-name">Christian Davis</div>
+                  </div>
+              </div>
+              <!-- testi 3 -->
+              <div class="swiper-slide testiCard">
+                <div class="testi-img">
+                  <img src="./images/student_3.png" alt="">
+                </div>
+                  <div class="testi-txt">
+                    <p>The teachers…amazing, I love them. I actually was a really bad student. I never really was interested in school and then I came to MCA and I actually look forward to school every day now and basketball practice.</p>
+                      <div class="testi-name">Tommy Garcia</div>
+                  </div>
+              </div>
+              <!-- testi 1 -->
+              <div class="swiper-slide testiCard">
+                <div class="testi-img">
+                  <img src="./images/student_1.png" alt="">
+                </div>
+                  <div class="testi-txt">
+                    <p>It’s about an hour and 45 minutes from our front door to the school drop off. It’s all worth it, with the opportunities and expectations and
+                      goals I can have.</p>
+                      <div class="testi-name">Tatum Barreras</div>
+                  </div>
+              </div>
+              <!-- testi 2 -->
+              <div class="swiper-slide testiCard">
+                <div class="testi-img">
+                  <img src="./images/student_2.png" alt="">
+                </div>
+                  <div class="testi-txt">
+                    <p>The attitude between kids is like family…more like family. We are always together. Since I started coming here, I have jumped levels in academics.</p>
+                      <div class="testi-name">Christian Davis</div>
+                  </div>
+              </div>
+            </div>
+            <div class="testiSlider-control">
+              <div class="swiper-button-prev slider-arrow"></div>
+              <div class="swiper-button-next slider-arrow"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- CTA -->
+      <div class="container">
+        <h2 class="cta-heading">Take the next step</h2>
+        <hr>
+      </div>
+      <section id="cta">
+        <div class="container d-flex">
+          <a href="#" class="btn btn-white">More Info</a>
+          <a href="#" class="btn">Apply Now</a>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <div class="container d-flex">
+          [logo]
 
+          GET IN TOUCH
+          2651 Burnet Avenue, Cincinnati, OH 45219
+          administration@mca.oh.us
+
+          USEFUL LINKS
+          Academics
+          Staff Directory
+          Apply Now
+
+          [Social Icons]
+        </div>
+      </div>
+      <div class="copyright">
+        <div class="container d-flex">
+          © 2023 Midwest Christian Academy
+          Terms & Privacy
+        </div>
+      </div>
+    </footer>
+
+    <!-- swiper js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <!-- main js -->
     <script src="scripts.js"></script>
   </body>
 </html>
