--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
+    <!-- icon library -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- main css -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -18,12 +23,31 @@
     <header>
       <div class="container d-flex">
         <div class="logo">
-          <img
-            src="./images/logo_midwestchristian.png"
-            alt="Midwest Christian Academy Logo"
-          />
+          <a href="#"
+            ><img
+              class="logo__img"
+              src="./images/logo_midwestchristian.png"
+              alt="Midwest Christian Academy Logo"
+          /></a>
         </div>
-        <nav><a href="#">Menu</a></nav>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link" onclick="toggle()">About MCA</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link" onclick="toggle()">Academics</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link" onclick="toggle()">Athletics</a>
+            </li>
+          </ul>
+          <div class="nav__cta">
+            <a class="nav__btn nav__btn-white" href="#">Contact us</a>
+            <a class="nav__btn" href="#">Apply Now</a>
+          </div>
+        </nav>
+        <div class="toggle" onclick="toggle()"></div>
       </div>
       <hr />
     </header>
@@ -34,20 +58,23 @@
         <div class="container d-grid">
           <h1><span>Welcome to</span> Midwest Christian Academy</h1>
           <p>
-            Midwest Christian Academy has a mission of <span class="hilight">educating and empowering</span>
+            Midwest Christian Academy has a mission of
+            <span class="hilight">educating and empowering</span>
             young men and women with a Christ-Centered focus. Our rigorous,
             online college preparatory curriculum encourages students to shine
             academically, develop character, and grow spiritually.
           </p>
           <p>
-            <b>The MCA experience, which is grounded in Christian principles,
+            <b
+              >The MCA experience, which is grounded in Christian principles,
               equips students for a lifetime of learning, leadership, service,
-              and worship.</b>
+              and worship.</b
+            >
           </p>
         </div>
       </section>
       <!-- SUB MENU -->
-      <section class="bg-basketball">
+      <section class="subMenu__bg">
         <div class="container d-flex">
           <div class="subMenu__list d-flex">
             <a href="#" class="subMenu spiritual">Spiritual Growth</a>
@@ -68,14 +95,29 @@
         </div>
       </section>
       <!-- IMAGINE LEARNING -->
-      <section id="imgLearning">  
+      <section id="imgLearning">
         <div class="container">
           <h2>EDUCATION POWERED BY Imagine Learning</h2>
-          <hr>
+          <hr />
           <div class="d-grid">
-            <p class="imgLearning__txt1"><b>Midwest Christian Academy partners with Imagine Learning Academy to <span class="hilight">maximize student achievement.</span></b></p>
-            <img class="imgLearning__img" src="./images/home_imagelearning.png" alt="Imagine Learning">
-            <p class="imgLearning__txt2">Imagine Edgenuity is a virtual alternative, and uses pre-recorded videos and primarily focuses on struggling students, and sticking at pace. Along with pre-recorded lecture, Imagine Edgenuity uses interactives and real-world problems.</p>
+            <p class="imgLearning__txt1">
+              <b
+                >Midwest Christian Academy partners with Imagine Learning
+                Academy to
+                <span class="hilight">maximize student achievement.</span></b
+              >
+            </p>
+            <img
+              class="imgLearning__img"
+              src="./images/home_imagelearning.png"
+              alt="Imagine Learning"
+            />
+            <p class="imgLearning__txt2">
+              Imagine Edgenuity is a virtual alternative, and uses pre-recorded
+              videos and primarily focuses on struggling students, and sticking
+              at pace. Along with pre-recorded lecture, Imagine Edgenuity uses
+              interactives and real-world problems.
+            </p>
           </div>
         </div>
       </section>
@@ -84,14 +126,14 @@
         <div class="container d-grid">
           <div class="elgibility__img">
             <div class="orangeCircle"></div>
-            <img src="./images/home_elgibility.png">
+            <img src="./images/home_elgibility.png" />
           </div>
           <div class="elgibility__txt">
             <h2>ELGIBILITY REGISTRATION</h2>
-            <hr>
+            <hr />
             <div class="elgibility__logo d-flex">
-              <img src="./images/logo_naia.png" alt="NAIA Logo">
-              <img src="./images/logo_ncaa.png" alt="NCAA Logo">
+              <img src="./images/logo_naia.png" alt="NAIA Logo" />
+              <img src="./images/logo_ncaa.png" alt="NCAA Logo" />
             </div>
           </div>
         </div>
@@ -106,54 +148,73 @@
               <!-- testi 1 -->
               <div class="swiper-slide testiCard">
                 <div class="testi-img">
-                  <img src="./images/student_1.png" alt="">
+                  <img src="./images/student_1.png" alt="" />
                 </div>
-                  <div class="testi-txt">
-                    <p>It’s about an hour and 45 minutes from our front door to the school drop off. It’s all worth it, with the opportunities and expectations and
-                      goals I can have.</p>
-                      <div class="testi-name">Tatum Barreras</div>
-                  </div>
+                <div class="testi-txt">
+                  <p>
+                    It’s about an hour and 45 minutes from our front door to the
+                    school drop off. It’s all worth it, with the opportunities
+                    and expectations and goals I can have.
+                  </p>
+                  <div class="testi-name">Tatum Barreras</div>
+                </div>
               </div>
               <!-- testi 2 -->
               <div class="swiper-slide testiCard">
                 <div class="testi-img">
-                  <img src="./images/student_2.png" alt="">
+                  <img src="./images/student_2.png" alt="" />
                 </div>
-                  <div class="testi-txt">
-                    <p>The attitude between kids is like family…more like family. We are always together. Since I started coming here, I have jumped levels in academics.</p>
-                      <div class="testi-name">Christian Davis</div>
-                  </div>
+                <div class="testi-txt">
+                  <p>
+                    The attitude between kids is like family…more like family.
+                    We are always together. Since I started coming here, I have
+                    jumped levels in academics.
+                  </p>
+                  <div class="testi-name">Christian Davis</div>
+                </div>
               </div>
               <!-- testi 3 -->
               <div class="swiper-slide testiCard">
                 <div class="testi-img">
-                  <img src="./images/student_3.png" alt="">
+                  <img src="./images/student_3.png" alt="" />
                 </div>
-                  <div class="testi-txt">
-                    <p>The teachers…amazing, I love them. I actually was a really bad student. I never really was interested in school and then I came to MCA and I actually look forward to school every day now and basketball practice.</p>
-                      <div class="testi-name">Tommy Garcia</div>
-                  </div>
+                <div class="testi-txt">
+                  <p>
+                    The teachers…amazing, I love them. I actually was a really
+                    bad student. I never really was interested in school and
+                    then I came to MCA and I actually look forward to school
+                    every day now and basketball practice.
+                  </p>
+                  <div class="testi-name">Tommy Garcia</div>
+                </div>
               </div>
               <!-- testi 1 -->
               <div class="swiper-slide testiCard">
                 <div class="testi-img">
-                  <img src="./images/student_1.png" alt="">
+                  <img src="./images/student_1.png" alt="" />
                 </div>
-                  <div class="testi-txt">
-                    <p>It’s about an hour and 45 minutes from our front door to the school drop off. It’s all worth it, with the opportunities and expectations and
-                      goals I can have.</p>
-                      <div class="testi-name">Tatum Barreras</div>
-                  </div>
+                <div class="testi-txt">
+                  <p>
+                    It’s about an hour and 45 minutes from our front door to the
+                    school drop off. It’s all worth it, with the opportunities
+                    and expectations and goals I can have.
+                  </p>
+                  <div class="testi-name">Tatum Barreras</div>
+                </div>
               </div>
               <!-- testi 2 -->
               <div class="swiper-slide testiCard">
                 <div class="testi-img">
-                  <img src="./images/student_2.png" alt="">
+                  <img src="./images/student_2.png" alt="" />
                 </div>
-                  <div class="testi-txt">
-                    <p>The attitude between kids is like family…more like family. We are always together. Since I started coming here, I have jumped levels in academics.</p>
-                      <div class="testi-name">Christian Davis</div>
-                  </div>
+                <div class="testi-txt">
+                  <p>
+                    The attitude between kids is like family…more like family.
+                    We are always together. Since I started coming here, I have
+                    jumped levels in academics.
+                  </p>
+                  <div class="testi-name">Christian Davis</div>
+                </div>
               </div>
             </div>
             <div class="testiSlider-control">
@@ -166,7 +227,7 @@
       <!-- CTA -->
       <div class="container">
         <h2 class="cta-heading">Take the next step</h2>
-        <hr>
+        <hr />
       </div>
       <section id="cta">
         <div class="container d-flex">
@@ -177,25 +238,36 @@
     </main>
     <footer>
       <div class="footer">
-        <div class="container d-flex">
-          [logo]
-
-          GET IN TOUCH
-          2651 Burnet Avenue, Cincinnati, OH 45219
-          administration@mca.oh.us
-
-          USEFUL LINKS
-          Academics
-          Staff Directory
-          Apply Now
-
-          [Social Icons]
+        <div class="container d-grid">
+          <div class="footer__logo">
+            <img
+              src="./images/logo_midwestchristian-white.png"
+              alt="logo_midwestchristian logo"
+            />
+          </div>
+          <div class="footer__info">
+            <h3>GET IN TOUCH</h3>
+            <p>2651 Burnet Avenue, Cincinnati, OH 45219</p>
+            <p>administration@mca.oh.us</p>
+          </div>
+          <div class="footer__info">
+            <h3>USEFUL LINKS</h3>
+            <ul>
+              <li><a href="">Academics</a></li>
+              <li><a href="">Staff Directory</a></li>
+              <li><a href="">Apply Now</a></li>
+            </ul>
+          </div>
+          <div class="footer__sic">
+            <a href="#" class="fa fa-play"></a>
+            <a href="#" class="fa fa-facebook"></a>
+          </div>
         </div>
       </div>
-      <div class="copyright">
+      <div class="footer__copyright">
         <div class="container d-flex">
-          © 2023 Midwest Christian Academy
-          Terms & Privacy
+          <div class="footer__copyright__txt">© 2023 Midwest Christian Academy</div>
+          <a href="#" class="footer__copyright__terms">Terms & Privacy</a>    
         </div>
       </div>
     </footer>
