submit index page

--- a/index.html
+++ b/index.html
@@ -240,17 +240,17 @@
       <div class="footer">
         <div class="container d-grid">
           <div class="footer__logo">
-            <img
+            <img class="footer__logo__img"
               src="./images/logo_midwestchristian-white.png"
               alt="logo_midwestchristian logo"
             />
           </div>
-          <div class="footer__info">
+          <div class="footer__contact">
             <h3>GET IN TOUCH</h3>
             <p>2651 Burnet Avenue, Cincinnati, OH 45219</p>
-            <p>administration@mca.oh.us</p>
+            <p class="footer__contact__email">administration@mca.oh.us</p>
           </div>
-          <div class="footer__info">
+          <div class="footer__menu">
             <h3>USEFUL LINKS</h3>
             <ul>
               <li><a href="">Academics</a></li>
@@ -258,7 +258,7 @@
               <li><a href="">Apply Now</a></li>
             </ul>
           </div>
-          <div class="footer__sic">
+          <div class="footer__sic d-flex">
             <a href="#" class="fa fa-play"></a>
             <a href="#" class="fa fa-facebook"></a>
           </div>
