--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </section>
       <!-- SUB MENU -->
-      <section class="subMenu__bg">
+      <section id="subMenus">
         <div class="container d-flex">
           <div class="subMenu__list d-flex">
             <a href="#" class="subMenu spiritual">Spiritual Growth</a>
