--- a/index.html
+++ b/index.html
@@ -23,23 +23,26 @@
     <header>
       <div class="container d-flex">
         <div class="logo">
-          <a href="#"
+          <a href="index.html"
             ><img
               class="logo__img"
-              src="./images/logo_midwestchristian.png"
+              src="./images/logo_midwestchristian.webp"
               alt="Midwest Christian Academy Logo"
           /></a>
         </div>
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link" onclick="toggle()">About MCA</a>
+              <a href="about.html" class="nav__link" onclick="toggle()">About MCA</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link" onclick="toggle()">Academics</a>
+              <a href="spiritual-growth.html" class="nav__link" onclick="toggle()">Spiritual Growth</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link" onclick="toggle()">Athletics</a>
+              <a href="academics.html" class="nav__link" onclick="toggle()">Academics</a>
+            </li>
+            <li class="nav__item">
+              <a href="athletices.html" class="nav__link" onclick="toggle()">Athletics</a>
             </li>
           </ul>
           <div class="nav__cta">
@@ -53,8 +56,8 @@
     </header>
     <main>
       <!-- HERO -->
-      <section id="hero" class="d-flex">
-        <img class="hero-img" src="./images/hero.png" />
+      <section class="hero" class="d-flex">
+        <img class="hero-img" src="./images/hero.webp" />
         <div class="container d-grid">
           <h1><span>Welcome to</span> Midwest Christian Academy</h1>
           <p>
@@ -83,13 +86,12 @@
           </div>
           <div class="subMenu__txt">
             <p>
-              Institutions install habits,<br />
-              habits become virtues,
+              Whatever you do,<br />             
+              <span class="hilight">Do it with your whole heart,</span>
             </p>
             <p>
-              and virtues<br />
-              become<br />
-              <span class="hilight">character.</span>
+              As Working<br /> 
+              for the Lord.<br /><br/>
             </p>
           </div>
         </div>
@@ -109,7 +111,7 @@
             </p>
             <img
               class="imgLearning__img"
-              src="./images/home_imagelearning.png"
+              src="./images/home_imagelearning.webp"
               alt="Imagine Learning"
             />
             <p class="imgLearning__txt2">
@@ -126,14 +128,14 @@
         <div class="container d-grid">
           <div class="elgibility__img">
             <div class="orangeCircle"></div>
-            <img src="./images/home_elgibility.png" />
+            <img src="./images/home_elgibility.webp" />
           </div>
           <div class="elgibility__txt">
             <h2>ELGIBILITY REGISTRATION</h2>
             <hr />
             <div class="elgibility__logo d-flex">
-              <img src="./images/logo_naia.png" alt="NAIA Logo" />
-              <img src="./images/logo_ncaa.png" alt="NCAA Logo" />
+              <img src="./images/logo_naia.webp" alt="NAIA Logo" />
+              <img src="./images/logo_ncaa.webp" alt="NCAA Logo" />
             </div>
           </div>
         </div>
@@ -148,7 +150,7 @@
               <!-- testi 1 -->
               <div class="swiper-slide testiCard">
                 <div class="testi-img">
-                  <img src="./images/student_1.png" alt="" />
+                  <img src="./images/student_1.webp" alt="" />
                 </div>
                 <div class="testi-txt">
                   <p>
@@ -162,7 +164,7 @@
               <!-- testi 2 -->
               <div class="swiper-slide testiCard">
                 <div class="testi-img">
-                  <img src="./images/student_2.png" alt="" />
+                  <img src="./images/student_2.webp" alt="" />
                 </div>
                 <div class="testi-txt">
                   <p>
@@ -176,7 +178,7 @@
               <!-- testi 3 -->
               <div class="swiper-slide testiCard">
                 <div class="testi-img">
-                  <img src="./images/student_3.png" alt="" />
+                  <img src="./images/student_3.webp" alt="" />
                 </div>
                 <div class="testi-txt">
                   <p>
@@ -191,7 +193,7 @@
               <!-- testi 1 -->
               <div class="swiper-slide testiCard">
                 <div class="testi-img">
-                  <img src="./images/student_1.png" alt="" />
+                  <img src="./images/student_1.webp" alt="" />
                 </div>
                 <div class="testi-txt">
                   <p>
@@ -205,7 +207,7 @@
               <!-- testi 2 -->
               <div class="swiper-slide testiCard">
                 <div class="testi-img">
-                  <img src="./images/student_2.png" alt="" />
+                  <img src="./images/student_2.webp" alt="" />
                 </div>
                 <div class="testi-txt">
                   <p>
@@ -241,7 +243,7 @@
         <div class="container d-grid">
           <div class="footer__logo">
             <img class="footer__logo__img"
-              src="./images/logo_midwestchristian-white.png"
+              src="./images/logo_midwestchristian-white.webp"
               alt="logo_midwestchristian logo"
             />
           </div>
