submit about page

--- a/about.html
+++ b/about.html
@@ -92,7 +92,85 @@
       </section>
       <!-- STAFF & FACILITIES -->
       <section class="content">
-
+        <div class="basketballCourt">
+          <img class="ellipse" src="./images/basketball_ellipse-left.svg">
+          <img class="ellipse" src="./images/basketball_ellipse-right.svg">
+        </div>
+        <div class="container">
+          <h2>Our Staffs</h2>
+          <div class="staff-list">
+            <div class="staff">
+              <img class="staff-img" src="./images/staff01.webp">
+              <p class="staff-name">Bret Dieterle</p>
+              <p class="staff-position">Principal</p>
+            </div>
+            <div class="staff">
+              <img class="staff-img" src="./images/staff02.webp">
+              <p class="staff-name">Tonika Bridges</p>
+              <p class="staff-position">Board Member</p>
+            </div>
+            <div class="staff">
+              <img class="staff-img" src="./images/staff03.webp">
+              <p class="staff-name"> Andrew</p>
+              <p class="staff-position">Teacher /<br/> Trainer Coach</p>
+            </div>
+            <div class="staff">
+              <img class="staff-img" src="./images/staff04.webp">
+              <p class="staff-name">Mwalimul</p>
+              <p class="staff-position">Head Coach</p>
+            </div>
+          </div>
+          <!-- End Staff List -->
+          <h2>Our Facilities</h2>
+        </div>
+        <!-- Slider main container -->
+        <div class="swiper facilitiesSlider">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <img class="swiper-slide facility-img" src="./images/facility01.webp">
+            <img class="swiper-slide facility-img" src="./images/facility02.webp">
+            <img class="swiper-slide facility-img" src="./images/facility03.webp">
+            <img class="swiper-slide facility-img" src="./images/facility01.webp">
+            <img class="swiper-slide facility-img" src="./images/facility02.webp">
+            <img class="swiper-slide facility-img" src="./images/facility03.webp">
+            <img class="swiper-slide facility-img" src="./images/facility01.webp">
+            <img class="swiper-slide facility-img" src="./images/facility02.webp">
+            <img class="swiper-slide facility-img" src="./images/facility03.webp">
+            <img class="swiper-slide facility-img" src="./images/facility01.webp">
+            <img class="swiper-slide facility-img" src="./images/facility02.webp">
+            <img class="swiper-slide facility-img" src="./images/facility03.webp">
+        </div>
+      </section>
+      <!-- MOTTO -->
+      <section class="motto">
+        <div class="container">
+          <h2>The MCA Motto...</h2>
+          <p class="motto-txt">Whatever you do,<br/>
+            <span class="hilight">Do it with your whole heart,</span><br/>
+            As Working for the Lord.</p>
+            <div class="saa-lists">
+              <!-- Spiritual -->
+              <div class="saa-item">
+                <h3>Spiritual Growth</h3>
+                <p>Spiritual growth and individual harmony creates individual students capable of overcoming difficulties and humbly progressing 
+                  through life.</p>
+              </div>
+              <!-- Academics -->
+              <div class="saa-item">
+                <h3>Academics</h3>
+                <p>Students deserve an academic program that provides for their individual needs, yet 
+                  challenges them to develop
+                  critical thinking skills.</p>
+              </div>
+              <!-- Athletics -->
+              <div class="saa-item">
+                <h3>Athletics</h3>
+                <p>MCA has developed an elite basketball training program specifically designed to create athletes capable of competing at the highest levels
+                  of the game.</p>
+              </div>
+            </div>
+        </div>
       </section>
       <!-- CTA -->
       <section id="cta">
