--- a/index.html
+++ b/index.html
@@ -218,6 +218,21 @@
                   <div class="testi-name">Christian Davis</div>
                 </div>
               </div>
+              <!-- testi 3 -->
+              <div class="swiper-slide testiCard">
+                <div class="testi-img">
+                  <img src="./images/student_3.webp" alt="" />
+                </div>
+                <div class="testi-txt">
+                  <p>
+                    The teachers…amazing, I love them. I actually was a really
+                    bad student. I never really was interested in school and
+                    then I came to MCA and I actually look forward to school
+                    every day now and basketball practice.
+                  </p>
+                  <div class="testi-name">Tommy Garcia</div>
+                </div>
+              </div>
             </div>
             <div class="testiSlider-control">
               <div class="swiper-button-prev slider-arrow"></div>
